--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,5 @@
 
 <h4>Title: <%= @article.title %></h4>
 <p><b>Description:</b><br/><%= @article.description %></p>
+<p><%= link_to "Edit this article", edit_article_path(@article) %></p>
+<p><%= link_to "All articles", articles_path %></p>
