--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,23 +1,4 @@
 <h1>Edit existing article:</h1>
 
-<% if @article.errors.any? %>
-<h2>Error:</h2>
-<ul>
-  <% @article.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-  <% end %>
-</ul>
-<% end %>
-
-<%= form_for @article do |f| %>
-  <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-  <%= f.submit %>
-<% end %>
-<p><%= link_to "All articles", articles_path %></p>
+<%= render 'form' %>
+<%= render 'back' %>
