--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,51 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+  float: left;
+  font-size: 1.7em;
+}
+#logo:hover{
+  color: #337ab7;
+  text-decoration: none;
+}
+.nav>li>a:hover, 
+.nav>li>a:focus {
+  background: #63abe8;
+}
+.center{
+  text-align: center;
+}
+.jumbotron{
+  background-image: asset-url("bg2.jpg");
+  background-size: cover;
+  height: 500px;
+}
+.jumbotron h1 {
+  color: #337ab7;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -1px;
+  font-weight: bold;
+}
+footer{
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+}
+footer a:hover{
+  color: #222;
+}
+footer small{
+  float: left;
+}
+footer ul{
+  float: right;
+  list-style: none;
+}
+footer li{
+  display: inline;
+  padding:1px 3px;
+  margin-left: 5px;
+}
