--- a/app/views/articles/_back.html.erb
+++ b/app/views/articles/_back.html.erb
@@ -1,1 +1,5 @@
-<p><%= link_to "All articles", articles_path %></p>
+<div class="col-xs-4 col-xs-offset-4">
+
+[ <%= link_to "Back", articles_path %> ]
+
+</div>
