--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,11 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'layouts/navigation'%>
+  <%= render 'layouts/navigation' %>
   <div class="container">
-    <%= render 'layouts/messages'%>
+    <%= render 'layouts/messages' %>
     <%= yield %>
   </div>
-  <%= render 'layouts/footer'%>
+  <%= render 'layouts/footer' %>
+  <%= debug(params) if Rails.env.development? %>
 </body>
 </html>
