--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,6 +28,10 @@
   letter-spacing: -1px;
   font-weight: bold;
 }
+.article-meta-details{
+  border-top: 1px solid #eaeaea;
+  margin-top: 15px;
+}
 .article-actions{
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
