--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,8 +18,10 @@
   <hr>
   <%= simple_format(@article.description) %>
   <div class="article-actions">
-    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-    <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete article?"}, class: "btn btn-xs btn-danger" %>
-    <%= link_to "All articles", articles_path, class: "btn btn-xs btn-success" %>
+    <% if logged_in? && current_user == @article.user %>
+      <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete this article", article_path(@article), method: :delete, data: {confirm: "Are you sure you want to delete article?"}, class: "btn btn-xs btn-danger" %>
+      <%= link_to "All articles", articles_path, class: "btn btn-xs btn-success" %>
+    <% end %>
   </div>
 </div>
