--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -21,6 +21,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><%= link_to "Articles", articles_path %></li>
+          <% if logged_in? %>
+            <li><%= link_to "Users", users_path %></li>
+          <% end %>
           <li><%= link_to "About", about_path %></li>
           <% if logged_in? %>
           <li class="dropdown">
