add edit category feature

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -53,7 +53,7 @@
   padding-left: 0;
 }
 .badge{
-  background-color: tan;
+  background-color: gainsboro;
   text-transform: uppercase;
   letter-spacing: -1px;
   font-weight: bold;
