--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,6 +8,11 @@
           <%= link_to "#{category.name}", category_path(category) %>
         </li>
         <li><small><%= pluralize(category.articles.count, "article") %></small></li>
+        <% if logged_in? and current_user.admin?%>
+          <div class="row">
+            <span class="badge"><%= link_to "Edit Category Name", edit_category_path(category) %></span>
+          </div>
+        <% end %>
       </div>
     </div>
   </ul>
